--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                      <a class="peopleicon fa fa-github-alt" href="https://github.com/candyam5522"></a> 
                                  </div>
                                  <p class="peopledesc">
-                                 <i>Software Engineer..- </i> Some Bio.
+                                 <i>Software Engineer..- </i> Miao has been working as a Systems Software Engineer for CTSA Informatics team since November 2015. In CTSA, she is involved in re-designing and developing of Eureka! Clinical user management, and phenotype projects, as well as refactoring UI using angularJS framework.
                                  </p>
 
                             </div>
@@ -134,7 +134,7 @@
                                      <a class="peopleicon fa fa-github-alt" href="#"></a> 
                                  </div>
                                  <p class="peopledesc">
-                                 <i>Innovation Program & Research Manager.-</i> Some Bio.   
+                                 <i>Innovation Program & Research Manager.-</i> Alex Edwards holds an MSPH degree in  public health informatics from Rollins School of Public Health at Emory University. His role in team is to provide informatics support for CTSA research products. 
                                  </p>
 
                             </div>
@@ -148,7 +148,6 @@
                 </div> 
             </div>
         </div>
-
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
